--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Priyadharshini S</p>
+        <p>Â© 2025 Priyadharshini S</p>
     </footer>
 
     <script>
