--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./Portfolio mine_files/my photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="my photo.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Priyadharshini S</h1>
             <p>Am student</p>
         </div>
@@ -149,8 +149,8 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="file:///C:/Users/XPRISTO/Desktop/priya/index.html#">wep page creation</a></li>
-                <li><a href="file:///C:/Users/XPRISTO/Desktop/priya/index.html#">Digital portfolio</a></li>
+                <li><a href="#"> wep page creation</a></li>
+                <li><a href="#">Digital portfolio</a></li>
                 <!-- Add more project links here -->
             </ul>
         </div>
@@ -161,7 +161,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="file:///C:/Users/XPRISTO/Desktop/priya/resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
