--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Bharathidasan University-Government college for women(Autonomous)kumbakonam-computer science</p>
+            <p>Bharathidasan University.-
+                Government college for women(Autonomous)kumbakonam-computer science</p>
             
             
         </div>
